Added Staff page, and added info to home page

--- a/index.html
+++ b/index.html
@@ -5,24 +5,90 @@
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/bulma.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 		<link rel="icon" href="img/logo.jpg" type="image/jpg">
-		<meta property="og:title" content="PCMR Community">
+		<meta property="og:title" content="PCMR Community - Home">
 		<meta property="og:description" content="The website for the PCMR Community Discord Server.">
 		<meta property="og:image" content="https://pcmrdiscord.tk/img/logo.jpg">
 		<meta name="theme-color" content="faf8f8">
-		<title>PCMR Community</title>
+		<title>PCMR Community - Home</title>
 	</head>
 	<body>
+		<nav class="navbar">
+			<div class="navbar-end">
+				<a href="staff.html" class="navbar-item">
+					<p>
+						Staff
+					</p>
+				</a>
+				<a href="https://discord.gg/HPkWhbb" class="navbar-item">
+					<p>
+						Join today!
+					</p>
+				</a>
+			</div>
+		</nav>
 		<div class="container has-text-centered">
 			<div class="animated fadeInUp columns">
 				<div class="column">
-					<h1 class="title is-1">Coming Soon</h1>
-					<h2 class="subtitle is-3">Our website is in the works, and will be out soon.</h2>
+					<h1 class="title is-1">PCMR Community</h1>
+					<br>
+					<h2 class="title is-3">What is PCMR Community?</h2>
+					<h3 class="subtitle is-5">PCMR Community is a chill community focused around gaming, technology, automotive and much more.</h3>
+					<br>
+					<a href="https://discord.gg/HPkWhbb" class="button is-primary">Join today!</a>
 				</div>
 				<div class="column">
-					<img src="img/logo.jpg" alt="Logo">
+					<img src="img/logo.jpg" class="logo" alt="Logo">
 				</div>
 			</div>
+			<br>
+			<br>
+			<div class="animated fadeIn columns">
+				<div class="column">
+					<p class="title is-2">Features</p>
+					<p class="subtitle is-4">These are some of the awesome features that come with joining PCMR Community.</p>
+				</div>
+			</div>
+			<div class="animated fadeIn columns">
+				<div class="column">
+					<div class="box">
+						<p class="title is-3">Active Community</p>
+						<i class="fas fa-handshake"></i>
+						<br>
+						<p>
+							We at PCMR Community pride ourselves on our active and friendly community, even though we currently on have 20-30 members, we plan to make that grow in the future, so we can be the biggest and best community around.
+						</p>
+					</div>
+				</div>
+				<div class="column">
+					<div class="box">
+						<p class="title is-3">Custom Music Bot</p>
+						<i class="fas fa-music"></i>
+						<br>
+						<p>
+							Also, we have a custom made music bot, so we can haveu unique fun that you can't have in any other server. Also, the playback is crystal clear, and is online 24/7.
+							<br>
+							<br>
+							<br>
+						</p>
+					</div>
+				</div>
+				<div class="column">
+					<div class="box">
+						<p class="title is-3">Huge Variety of Topics</p>
+						<i class="fas fa-location-arrow"></i>
+						<br>
+						<p>
+							In addition to all of that, we also have a huge variety of topics to talk about, like food, technology, memes, anything.
+							<br>
+							<br>
+							<br>
+						</p>
+					</div>
+				</div>
+			</div>
+			<p class="subtitle is-6" style="padding-top: 100px">Site by <a href="https://danjamesbee.tk">Dan</a>.</p>
 		</div>
 	</body>
 </html>
