Updated invite link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						Staff
 					</p>
 				</a>
-				<a href="https://discord.gg/HPkWhbb" class="navbar-item">
+				<a href="https://discord.gg/TCBAU7E" class="navbar-item">
 					<p>
 						Join today!
 					</p>
@@ -37,7 +37,7 @@
 					<h2 class="title is-3">What is PCMR Community?</h2>
 					<h3 class="subtitle is-5">PCMR Community is a chill community focused around gaming, technology, automotive and much more.</h3>
 					<br>
-					<a href="https://discord.gg/HPkWhbb" class="button is-primary">Join today!</a>
+					<a href="https://discord.gg/TCBAU7E" class="button is-primary">Join today!</a>
 				</div>
 				<div class="column">
 					<img src="img/logo.jpg" class="logo" alt="Logo">
